# rambit

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  fly.toml  rustc-ice-2025-08-13T18_14_21-339655.txt  rustc-ice-2025-08-13T18_14_29-340000.txt
.cargo/: config.toml
.github/workflows/: deploy.yml  nix-checks.yml
crates/app/: Cargo.toml
crates/app/src/: app_state.rs  endpoints.rs  main.rs
crates/app/src/endpoints/: upload.rs
crates/auth-domain/: Cargo.toml
crates/auth-domain/src/: cache.rs  errors.rs  lib.rs  tests.rs
crates/billing-domain/: Cargo.toml
crates/billing-domain/src/: customer.rs  lib.rs  subscription.rs
crates/catbat/: Cargo.toml
crates/catbat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: app_state.rs  args.rs  authenticate.rs  main.rs  upload.rs
crates/cli/src/upload/: current_system.rs  path_info.rs
crates/css-minify-macro/: Cargo.toml
crates/css-minify-macro/src/: consolidate_font_face_rules.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: authenticate.rs  billing.rs  counts.rs  create.rs  delete_entry.rs  download.rs  fetch_by_id.rs  fetch_by_name.rs  fetch_by_org.rs  lib.rs  meta.rs  metrics.rs  migrate.rs  mutate.rs  mutate_user.rs  narinfo.rs  search_by_user.rs  storage_glue.rs  upload.rs
crates/domain/src/billing/: helpers.rs  subscriptions.rs
crates/domain/src/download/: execute.rs  plan.rs  tests.rs
crates/domain/src/meta/: entry_counts.rs  fetch_by_id.rs  search_stores_by_user.rs
crates/domain/src/mutate/: create.rs  delete_entry.rs
crates/domain/src/upload/: execute.rs  plan.rs  tests.rs
crates/drop-stream/: Cargo.toml
crates/drop-stream/src/: lib.rs
crates/grid/: Cargo.toml
crates/grid-state/: Cargo.toml
crates/grid-state/src/: lib.rs
crates/grid/src/: app_state.rs  args.rs  endpoints.rs  handlers.rs  main.rs  middleware.rs  tracing_subscribers.rs  util_traits.rs
crates/grid/src/endpoints/: authenticate.rs  download.rs  extractors.rs  narinfo.rs  nix_cache_info.rs  signup.rs  upload.rs
crates/grid/src/endpoints/extractors/: cache_list.rs  cache_name.rs  deriver_store_path.rs  generic.rs  store_path.rs  user_id.rs
crates/grid/src/endpoints/extractors/generic/: entity_name_from_path.rs  entity_name_from_query.rs  store_path_from_query.rs
crates/grid/src/middleware/: cache_on_success.rs  compression_predicate.rs  make_ulid_request_id.rs  on_request_metric_reporter.rs  on_response_metric_reporter.rs
crates/gridpoints/: Cargo.toml
crates/gridpoints/src/: download.rs  extractors.rs  lib.rs  narinfo.rs  upload.rs  util_traits.rs
crates/gridpoints/src/extractors/: cache_list.rs  target_store.rs
crates/gridpoints/src/extractors/generic/: store_path_from_query.rs
crates/metrics-domain/: Cargo.toml
crates/metrics-domain/src/: batcher.rs  handle_batches.rs  lib.rs
crates/model-types/: Cargo.toml
crates/model-types/src/: compression_status.rs  email_address.rs  entity_name.rs  file_size.rs  human_name.rs  lib.rs  paddle.rs  visibility.rs
crates/models/: Cargo.toml
crates/models/src/: cache.rs  entry.rs  lib.rs  org.rs  session.rs  store.rs  token.rs  user.rs
crates/models/src/entry/: abbreviate.rs  digest.rs  entry_data.rs  nar_data.rs  narinfo.rs
crates/models/src/store/: creds.rs
crates/owl/: Cargo.toml
crates/owl/src/: lib.rs
crates/prime-domain/: Cargo.toml
crates/prime-domain/src/: canonical.rs  counts.rs  create.rs  delete_entry.rs  download.rs  fetch_by_id.rs  fetch_by_name.rs  fetch_by_org.rs  lib.rs  migrate.rs  mutate_user.rs  narinfo.rs  pointer.rs  search_by_user.rs  upload.rs
crates/repos/: Cargo.toml
crates/repos/src/: base.rs  cache.rs  entry.rs  lib.rs  store.rs  temp_storage.rs  token.rs  user_storage.rs
crates/repos/src/temp_storage/: mock.rs
crates/site-app/: Cargo.toml
crates/site-app/src/: components.rs  context.rs  formatting_utils.rs  hooks.rs  join_classes.rs  lib.rs  navigation.rs  pages.rs  reactive_utils.rs  resources.rs
crates/site-app/src/components/: copy_button.rs  create_button.rs  data_table.rs  footer.rs  form_layout.rs  icons.rs  input_field.rs  item_links.rs  navbar.rs  popover.rs  refetch_while_focused.rs  store_path.rs
crates/site-app/src/components/input_field/: icon.rs  specialized.rs
crates/site-app/src/components/navbar/: account_menu.rs  org_selector.rs
crates/site-app/src/hooks/: cache_hook.rs  create_cache_hook.rs  create_org_hook.rs  delete_entry_hook.rs  entry_hook.rs  login_hook.rs  org_hook.rs  signup_hook.rs
crates/site-app/src/pages/: create_cache.rs  create_org.rs  create_store.rs  dashboard.rs  entry.rs  homepage.rs  login.rs  logout.rs  org_settings.rs  payment_link.rs  protected.rs  signup.rs  unauthorized.rs
crates/site-app/src/pages/create_cache/: visibility_selector.rs
crates/site-app/src/pages/create_store/: credentials_input.rs
crates/site-app/src/pages/dashboard/: cache.rs  current_org.rs  entry.rs  requested_org.rs  store.rs
crates/site-app/src/pages/entry/: action_tile.rs  caches_tile.rs  store_path_tile.rs  title_tile.rs
crates/site-app/src/pages/org_settings/: billing.rs  overview.rs
crates/site-app/src/resources/: cache.rs  entry.rs  org.rs  store.rs  subscription.rs
crates/site-app/style/: funnel_sans.css  main.css  package.json  utilities.css
crates/site-app/style/components/: btn-link.css
crates/site-app/style/fonts/: funnel_display.css  jetbrains_mono.css
crates/site-app/style/src/: elevation.css  main.css  typography.css  utilities.css
crates/site-app/style/src/components/: btn-link.css  btn.css  input-field.css  table.css  text-link.css
crates/site-app/style/src/theme/: colors-dark.css  colors.css
crates/site-app/style/tailwind/: package.json  tailwind.config.js
crates/site-frontend/: Cargo.toml
crates/site-paddle/: Cargo.toml
crates/site-paddle/src/: lib.rs
crates/site-server/: Cargo.toml
crates/site-server/src/: main.rs
crates/tower-sessions-db-store/: Cargo.toml
crates/tower-sessions-db-store/src/: lib.rs
fly/: app.toml  quickwit.toml
quickwit-indices/: compute.yaml  egress.yaml  http-event.yaml
(+90 files in other folders)
