
[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
license-file = "LICENSE.md"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
# # app-core
belt = { git = "https://github.com/johnbchron/app-core" }
db = { git = "https://github.com/johnbchron/app-core" }
dvf = { git = "https://github.com/johnbchron/app-core" }
kv = { git = "https://github.com/johnbchron/app-core" }
model = { git = "https://github.com/johnbchron/app-core" }
storage = { git = "https://github.com/johnbchron/app-core" }

# belt = { path = "../app-core/crates/belt" }
# db = { path = "../app-core/crates/db" }
# dvf = { path = "../app-core/crates/dvf" }
# kv = { path = "../app-core/crates/kv" }
# model = { path = "../app-core/crates/model" }
# storage = { path = "../app-core/crates/storage" }

# atomic-ish features
bytes = { version = "1" }
clap = { version = "4.5", features = [ "derive" ] }
futures = { version = "0.3" }
miette = { git = "https://github.com/zkat/miette", default-features = false, features = [
  "derive",
] }
nix-compat = { git = "https://code.tvl.fyi/depot.git:workspace=views/tvix.git", default-features = false }
serde = { version = "1", features = [ "derive" ] }
thiserror = { version = "2" }
tracing = { version = "0.1" }
ulid = { version = "1.1", features = [ "serde" ] }

axum = { version = "0.8", features = [ "http2", "macros" ] }
tower = { version = "0.5" }
tower-http = { version = "0.6" }

axum-login = { version = "0.17" }
tower-sessions = { version = "0.14" }

# async
tokio = { version = "1" }
