
[workspace]
members = [ "crates/*" ]
resolver = "3"

[workspace.package]
license-file = "LICENSE.md"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
# # app-core
belt = { git = "https://github.com/johnbchron/app-core" }
db = { git = "https://github.com/johnbchron/app-core" }
dvf = { git = "https://github.com/johnbchron/app-core" }
kv = { git = "https://github.com/johnbchron/app-core" }
kv-redb-impl = { git = "https://github.com/johnbchron/app-core" }
kv-tikv-impl = { git = "https://github.com/johnbchron/app-core" }
model = { git = "https://github.com/johnbchron/app-core" }
storage = { git = "https://github.com/johnbchron/app-core" }

# essentials
bytes = { version = "1" }
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }
thiserror = { version = "2" }
tracing = { version = "0.1" }
ulid = { version = "1.1", features = [ "serde" ] }

# atomic-ish features
clap = { version = "4.5", features = [ "derive" ] }
miette = { git = "https://github.com/zkat/miette", default-features = false, features = [
  "derive",
] }
nix-compat = { git = "https://github.com/johnbchron/tvix", default-features = false }
nix-nar = { version = "0.3" }
sha256 = { version = "1.6", default-features = false }

# async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }

# network stack
axum = { version = "0.8", features = [ "http2", "macros" ] }
axum-login = { version = "0.18" }
tower = { version = "0.5" }
tower-http = { version = "0.6" }
tower-sessions = { version = "0.14" }

# # # # # # # # # # # 
### leptos config ###
# # # # # # # # # # #

leptos = { version = "0.8", features = [ "nightly", "islands" ] }
leptos_axum = { version = "0.8", features = [  ] }
leptos_meta = { version = "0.8", features = [  ] }
leptos_router = { version = "0.8", features = [ "nightly" ] }

console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.100"

[patch.crates-io]
leptos = { git = 'https://github.com/leptos-rs/leptos.git' }
leptos_axum = { git = 'https://github.com/leptos-rs/leptos.git' }
leptos_meta = { git = 'https://github.com/leptos-rs/leptos.git' }
leptos_router = { git = 'https://github.com/leptos-rs/leptos.git' }

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 'z'

[[workspace.metadata.leptos]]
hash-files = false
name = "site"

bin-package = "grid"
lib-package = "site-frontend"

site-pkg-dir = "pkg"
site-root = "target/site"

assets-dir = "crates/site-app/public"
# style-file = "crates/site-app/style/src/main.css"

reload-port = 3001
site-addr = "0.0.0.0:3000"

browserquery = "defaults"

tailwind-input-file = "crates/site-app/style/src/main.css"

# set by cargo-leptos
env = "DEV"
watch = false

bin-default-features = true
bin-features = [  ]
# bin-profile-dev = "dev"
lib-default-features = true
lib-features = [  ]
lib-profile-release = "wasm-release"
