[package]
name = "auth-domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models" }

meta-domain = { path = "../meta-domain" }
mutate-domain = { path = "../mutate-domain" }

miette.workspace = true
thiserror.workspace = true

tokio = { workspace = true, features = [ "sync" ] }
tracing.workspace = true

argon2 = "0.5.3"
async-trait.workspace = true
axum-login.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }
