[package]
name = "auth-domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models" }

domain = { path = "../domain" }

miette.workspace = true
thiserror.workspace = true

tokio = { workspace = true, features = [ "sync" ] }
tracing.workspace = true

async-trait.workspace = true
axum-login.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "full" ] }
