[package]
name = "billing-domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models" }

miette.workspace = true
thiserror.workspace = true

# paddle-rust-sdk = { version = "0.14" }
paddle-rust-sdk = { git = "https://github.com/johnbchron/paddle-rust-sdk", default-features = false, features = [
  "rustls-webpki-roots",
] }

[lints]
workspace = true
