[package]
name = "css-minify-macro"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
lightningcss = "1.0.0-alpha.67"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [ "full" ] }

[lints]
workspace = true

[dev-dependencies]
askama = "0.14.0"
axum.workspace = true
