[package]
name = "domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models" }
owl = { path = "../owl" }

belt.workspace = true
db.workspace = true
storage.workspace = true

bytes.workspace = true
futures.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
