[package]
name = "domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
billing-domain = { path = "../billing-domain" }
meta-domain = { path = "../meta-domain" }
metrics-types = { path = "../metrics-types" }
models = { path = "../models" }
mutate-domain = { path = "../mutate-domain" }
owl = { path = "../owl" }

belt.workspace = true
db.workspace = true
storage.workspace = true

bytes.workspace = true
futures.workspace = true
miette.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
