[package]
name = "grid"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
prime-domain = { path = "../prime-domain" }

kv = { workspace = true, features = [ "redb" ] }

tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

clap.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum.workspace = true
serde.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [ "trace" ] }

[lints]
workspace = true
