[package]
name = "grid"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
auth-domain = { path = "../auth-domain" }
prime-domain = { path = "../prime-domain" }
site-app = { path = "../site-app", default-features = false, features = [ "ssr" ] }
tower-sessions-db-store = { path = "../tower-sessions-db-store" }

kv = { workspace = true, features = [ "redb", "no-field-names" ] }

tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

leptos = { workspace = true, features = [ "ssr", "tracing" ] }
leptos_axum.workspace = true
leptos_router.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

clap.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum.workspace = true
axum-login.workspace = true
http-body-util = "0.1.3"
serde.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [ "trace" ] }
tower-sessions.workspace = true

[lints]
workspace = true
