[package]
name = "grid"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
auth-domain = { path = "../auth-domain" }
domain = { path = "../domain" }
site-app = { path = "../site-app", default-features = false, features = [ "ssr" ] }
tower-sessions-db-store = { path = "../tower-sessions-db-store" }

db = { workspace = true }
kv = { workspace = true }
kv-redb-impl = { workspace = true }
kv-tikv-impl = { workspace = true, optional = true }

tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ] }

leptos = { workspace = true, features = [ "ssr", "tracing" ] }
leptos_axum.workspace = true
leptos_router.workspace = true

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

clap.workspace = true
miette = { workspace = true, features = [ "fancy" ] }

axum.workspace = true
axum-login.workspace = true
http = { version = "1" }
http-body = { version = "1" }
http-body-util = "0.1.3"
serde.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = [ "trace", "compression-full" ] }
tower-sessions.workspace = true

[features]
default = [ "postgres" ]
json-tracing = [ "tracing-subscriber/json", "tracing-subscriber/valuable" ]
postgres = [ "db/postgres" ]
tikv = [ "dep:kv-tikv-impl" ]

[lints]
workspace = true
