[package]
name = "metrics-domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
category-batcher = { path = "../category-batcher" }
metrics-types = { path = "../metrics-types" }
models = { path = "../models" }

miette.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = [ "sync" ] }
tracing.workspace = true

reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "json" ] }

[dev-dependencies]
tokio = { workspace = true, features = [ "sync", "macros", "rt-multi-thread" ] }

[lints]
workspace = true
