[package]
name = "models"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
dvf.workspace = true
model.workspace = true

nix-compat = { git = "https://code.tvl.fyi/depot.git", default-features = false }

serde.workspace = true
ulid.workspace = true

[lints]
workspace = true
