[package]
name = "models"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
dvf.workspace = true
model.workspace = true

nix-compat.workspace = true

serde.workspace = true
ulid.workspace = true

axum-login = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }

[features]
default = [ "auth", "session" ]

auth = [ "dep:axum-login" ]
session = [ "dep:tower-sessions" ]

[lints]
workspace = true
