[package]
name = "models"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
model-types = { path = "../model-types" }

model.workspace = true

nix-compat.workspace = true
time = { version = "0.3", features = [ "serde" ] }

serde.workspace = true
ulid.workspace = true

axum-login = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }

[features]
default = [ "auth", "session" ]

auth = [ "dep:axum-login" ]
session = [ "dep:tower-sessions", "dep:serde_json" ]

[lints]
workspace = true
