[package]
name = "owl"
version = "0.1.0"

edition = "2024"
license-file.workspace = true

[dependencies]
models = { path = "../models" }

belt.workspace = true

nix-compat.workspace = true

miette.workspace = true

hex = "0.4.3"
nix-nar = { version = "0.3" }
regex = "1.11.1"
sha256 = { version = "1.6.0", default-features = false }
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
bytes.workspace = true
tokio = { workspace = true, features = [ "full" ] }
