[package]
name = "prime-domain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex.workspace = true
repos = { path = "../repos" }
models = { path = "../models" }
mollusk = { path = "../mollusk" }

async-trait.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
