[package]
name = "prime-domain"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models" }

belt.workspace = true
db.workspace = true
storage.workspace = true

miette.workspace = true
thiserror.workspace = true

[lints]
workspace = true
