[package]
name = "repos"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
hex.workspace = true
models = { path = "../models" }
db.workspace = true
storage.workspace = true

async-trait.workspace = true
miette.workspace = true
tracing.workspace = true

tokio = { workspace = true, features = ["fs"] }

[lints]
workspace = true

[features]
default = []
