[package]
edition = "2021"
name = "site-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true

models = { path = "../models", default-features = false }

serde.workspace = true

gloo-net = { version = "0.6", default-features = false, features = [ "http", "json" ] }

[features]
default = [  ]
hydrate = [ "leptos/hydrate" ]
ssr = [ "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum" ]
