[package]
edition = "2021"
name = "site-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true

auth-domain = { path = "../auth-domain", optional = true }
css-minify-macro = { path = "../css-minify-macro" }
domain = { path = "../domain", optional = true }
models = { path = "../models", default-features = false }
site-paddle = { path = "../site-paddle" }

serde.workspace = true
tracing.workspace = true

const_base = "0.2.0"
gloo-net = { version = "0.6", default-features = false, features = [ "http", "json" ] }
leptos-fetch = { version = "0.4", features = [ "devtools" ] }
leptos-use = { version = "0.16", default-features = false, features = [
  "on_click_outside",
  "signal_throttled",
  "use_event_listener",
  "use_window",
  "use_interval_fn",
  "use_window_focus",
  "use_clipboard",
] }

[features]
default = [  ]
hydrate = [ "leptos/hydrate", "site-paddle/hydrate" ]
ssr = [
  "leptos/ssr",
  "leptos/tracing",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-fetch/ssr",
  "leptos-use/ssr",
  "site-paddle/ssr",
  "dep:leptos_axum",
  "dep:domain",
  "dep:auth-domain",
]
