[package]
name = "tower-sessions-db-store"
version = "0.1.0"

edition = "2024"
license-file.workspace = true
publish = false

[dependencies]
models = { path = "../models", features = [ "session" ] }

db.workspace = true

async-trait.workspace = true
tower-sessions.workspace = true

[lints]
workspace = true
